# RxTerm

./: .gitignore  AGENT.md  CLAUDE.md  README.md  build-release.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-13-vnc-host-support.md
docs/superpowers/specs/: 2026-04-13-vnc-host-support-design.md
src/: App.tsx  api.ts  novnc.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  known_hosts.rs  lib.rs  main.rs  rdp.rs  session.rs  ssh.rs  vnc.rs
src/components/: HostKeyDialog.tsx  RdpPane.tsx  SessionList.tsx  SshSessionForm.tsx  TerminalPane.tsx  TerminalTabs.tsx  VncPane.tsx
