[package]
name = "rxterm"
version = "0.1.0"
description = "A lightweight terminal and remote session management application"
authors = ["RxTerm Contributors"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "rxterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rxterm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
russh = "0.46"
russh-keys = "0.46"
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
base64 = "0.22"
async-trait = "0.1"
log = "0.4"
tauri-plugin-updater = "2"
