[package]
name = "rxterm"
version = "0.1.0"
description = "A lightweight terminal and remote session management application"
authors = ["RxTerm Contributors"]
edition = "2021"
license = "GPL-3.0"

[lib]
name = "rxterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "rxterm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
russh = "0.46"
russh-keys = "0.46"
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }
base64 = "0.22"
async-trait = "0.1"
log = "0.4"
tauri-plugin-updater = "2"
tokio-tungstenite = "0.26"
futures-util = "0.3"
# IronRDP crates — these are separate crates from the same IronRDP workspace.
# Each crate has its own independent semver version; the versions below are
# the compatible set that shipped together.
ironrdp-async = "0.8"
ironrdp-connector = "0.8"
ironrdp-session = "0.8"
ironrdp-graphics = "0.7"
ironrdp-pdu = "0.7"
ironrdp-tls = { version = "0.2", features = ["native-tls"] }
ironrdp-tokio = "0.8"
ironrdp-input = "0.5"
tokio-native-tls = "0.3"
